--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
-    "mysql2": "^1.6.4",
     "sequelize": "^4.41.2",
+    "slug": "^0.9.2",
     "sqlite3": "^4.0.4"
   }
 }
